syntax = "proto3";

package location.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/core-platform/proto/location/v1";

// ==========================================
// VALUE OBJECTS GÉOGRAPHIQUES
// ==========================================

message GeoPoint {
  double latitude = 1;
  double longitude = 2;
  double altitude = 3;
}

message LocationMetrics {
  float horizontal_accuracy = 1; // Précision en mètres
  float vertical_accuracy = 2;
  float speed = 3;               // Vitesse en m/s
  float bearing = 4;             // Direction en degrés (0-360)
}

message MovementMetrics {
  string activity_type = 1;      // ex: "walking", "driving", "stationary"
  float confidence = 2;          // 0.0 à 1.0
}

// ==========================================
// MODÈLE DE DONNÉES (AGRÉGAT LOCATION)
// ==========================================

message UserLocation {
  string account_id = 1;
  string region_code = 2;

  // Position et Métriques
  GeoPoint coordinates = 3;
  LocationMetrics metrics = 4;   // Optionnel
  MovementMetrics movement = 5;  // Optionnel

  // Privacy
  bool is_ghost_mode = 6;
  int32 privacy_radius_meters = 7;

  google.protobuf.Timestamp updated_at = 8;
  int64 version = 9;
}

// ==========================================
// SERVICE DE LOCALISATION
// ==========================================

service LocationService {
  // Lecture de la position (respecte le Ghost Mode pour les tiers)
  rpc GetUserLocation(GetUserLocationRequest) returns (UserLocation);

  // Mise à jour massive de la position (Ingestion temps réel)
  rpc UpdatePosition(UpdatePositionRequest) returns (UserLocation);

  // Configuration Privacy
  rpc SetGhostMode(SetGhostModeRequest) returns (UserLocation);
  rpc UpdatePrivacyRadius(UpdatePrivacyRadiusRequest) returns (UserLocation);
}

// ==========================================
// MESSAGES DE REQUÊTES
// ==========================================

message GetUserLocationRequest {
  string account_id = 1;
}

message UpdatePositionRequest {
  string account_id = 1;
  GeoPoint coordinates = 2;
  LocationMetrics metrics = 3;
  MovementMetrics movement = 4;
}

message SetGhostModeRequest {
  string account_id = 1;
  bool enabled = 2;
}

message UpdatePrivacyRadiusRequest {
  string account_id = 1;
  int32 radius_meters = 2;
}